Use Integer.vauleOf instead of constructor